VTKU-14 : Käytä pienen integerin vakioarvoa